fixed lots of shit, back behind here is danger

--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -1,6 +1,7 @@
 .main-page {
   display: flex;
   flex-direction: column;
+  min-height: 700px;
 }
 
 .page-body {
